--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@ body {
   background: transparent;
   overflow: scroll;
 }
-
 body::before {
   content: "";
   position: fixed;
@@ -23,7 +22,6 @@ a {
   color: #f3cbff;
   text-decoration: none;
 }
-
 a:hover {
   color: #faeaff;
   text-decoration: none;
@@ -40,7 +38,6 @@ a:hover {
   background-size: cover;
   position: relative;
 }
-
 #landing::before {
   content: "";
   background: rgba(0, 0, 0, 0.25);
@@ -50,7 +47,6 @@ a:hover {
   left: 0;
   right: 0;
 }
-
 #landing .landing-container {
   position: absolute;
   bottom: 0;
@@ -63,14 +59,12 @@ a:hover {
   flex-direction: column;
   padding: 0 15px;
 }
-
 #landing h1 {
   margin: 0 0 10px 0;
   font-size: 64px;
   font-family: "Nunito", sans-serif;
   color: #fff;
 }
-
 #landing h2 {
   color: #eee;
   margin-bottom: 50px;
@@ -79,19 +73,24 @@ a:hover {
   letter-spacing: 1px;
   text-transform: uppercase;
 }
-
 #landing .btn-scroll {
-  transition: .5s;
+  transition: 0.5s;
   color: grey;
   animation: up-down 1s ease-in-out infinite alternate-reverse both;
 }
-
 #landing .btn-scroll i {
   font-size: 38px;
 }
-
 #landing .btn-scroll:hover {
   color: #faeaff;
+}
+
+#about .section-title {
+  font-family: "Nunito", sans-serif;
+  font-weight: 200;
+}
+#about img {
+  width: 350px;
 }
 
 .navbar {
@@ -105,11 +104,9 @@ a:hover {
   width: 100vw;
   font-family: "Nunito", sans-serif;
 }
-
 .navbar .navName {
   font-size: 30px;
 }
-
 .navbar ul {
   list-style: none;
   margin-top: 0;
@@ -120,17 +117,14 @@ a:hover {
   justify-content: space-evenly;
   font-family: "Halant", serif;
 }
-
 .navbar ul li {
   margin-left: 10px;
 }
-
 .navbar a {
   text-decoration: none;
   color: white;
   transition: all 3s;
 }
-
 .navbar a:hover {
   color: #f3cbff;
 }
@@ -139,19 +133,16 @@ a:hover {
   margin-top: 5vh;
   margin-bottom: 5vh;
 }
-
 #skills h2 {
   font-family: "Nunito", sans-serif;
   font-weight: 2000;
 }
-
 #skills .progress {
   height: 60px;
   display: block;
   background: none;
   border-radius: 0;
 }
-
 #skills .progress .skill {
   padding: 10px 0;
   margin: 0;
@@ -160,20 +151,17 @@ a:hover {
   font-family: sans-serif;
   color: #fff;
 }
-
 #skills .progress .skill .val {
   float: right;
   font-style: normal;
 }
-
 #skills .progress-bar-wrap {
   background-color: white;
   height: 10px;
 }
-
 #skills .progress-bar {
   height: 10px;
-  transition: .9s;
+  transition: 0.9s;
   background-color: #8c559c;
 }
 
@@ -181,7 +169,6 @@ a:hover {
   font-family: "Nunito", sans-serif;
   font-weight: 2000;
 }
-
 .resume .resume-title {
   font-size: 26px;
   font-weight: 700;
@@ -190,14 +177,12 @@ a:hover {
   color: #fff;
   font-family: "Halant", serif;
 }
-
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
   border-left: 2px solid #f3cbff;
   position: relative;
 }
-
 .resume .resume-item h4 {
   line-height: 18px;
   font-size: 18px;
@@ -207,7 +192,6 @@ a:hover {
   color: #8c559c;
   margin-bottom: 10px;
 }
-
 .resume .resume-item h5 {
   font-size: 16px;
   background: rgba(255, 255, 255, 0.25);
@@ -216,19 +200,15 @@ a:hover {
   font-weight: 600;
   margin-bottom: 10px;
 }
-
 .resume .resume-item ul {
   padding-left: 20px;
 }
-
 .resume .resume-item ul li {
   padding-bottom: 0;
 }
-
 .resume .resume-item:last-child {
   padding-bottom: 0;
 }
-
 .resume .resume-item::before {
   content: "";
   position: absolute;
@@ -245,37 +225,32 @@ a:hover {
   font-family: "Nunito", sans-serif;
   font-weight: 2000;
 }
-
 .gallery .proj {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
 }
-
 .gallery .proj .projTitle {
   text-align: center;
   font-family: "Nunito", sans-serif;
   font-size: 18px;
   margin-bottom: 10px;
 }
-
 .gallery .proj .projDescription {
   font-family: "Nunito", sans-serif;
 }
-
 .gallery .proj .slide {
   margin-bottom: 10px;
 }
-
 .gallery .active {
   width: 300px;
   height: 200px;
-  background-color: white;
+  border: white solid 2px;
 }
 
 body, button, input {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 700;
   letter-spacing: 1.4px;
 }
@@ -298,7 +273,7 @@ body, button, input {
 }
 
 .screen:after {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   top: 0;
@@ -389,7 +364,7 @@ body, button, input {
 }
 
 .app-title:after {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   left: 0;
@@ -404,7 +379,6 @@ body, button, input {
   color: #888;
   margin-top: 10px;
 }
-
 .app-contact.first {
   margin-top: 120px;
 }
@@ -420,9 +394,8 @@ body, button, input {
 .app-form-group.buttons {
   margin-bottom: 0;
   text-align: right;
-  transition: .5s;
+  transition: 0.5s;
 }
-
 .app-form-group.buttons button:hover {
   color: #caacd2;
 }
@@ -437,7 +410,7 @@ body, button, input {
   font-size: 14px;
   text-transform: uppercase;
   outline: none;
-  transition: border-color .2s;
+  transition: border-color 0.2s;
 }
 
 .app-form-control::placeholder {
@@ -463,7 +436,7 @@ body, button, input {
   align-items: center;
   margin-top: 20px;
   color: #c794d6;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   font-size: 16px;
   font-weight: normal;
 }
@@ -478,26 +451,29 @@ body, button, input {
   .screen-body {
     flex-direction: column;
   }
+
   .screen-body-item.left {
     margin-bottom: 30px;
   }
+
   .app-title {
     flex-direction: row;
   }
+
   .app-title span {
     margin-right: 12px;
   }
+
   .app-title:after {
     display: none;
   }
 }
-
 @media screen and (max-width: 600px) {
   .screen-body {
     padding: 40px;
   }
+
   .screen-body-item {
     padding: 0;
   }
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
